--- a/opomniki/opomniki.html
+++ b/opomniki/opomniki.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<script src="skripta.js"></script>
+	<link rel="stylesheet" type="text/css" href="stili.css" media="screen" />
     <title>..:: Opomniki ::..</title>
     <meta charset="UTF-8">    
 </head>
